добавил еще 2 секции

--- a/index.html
+++ b/index.html
@@ -55,13 +55,68 @@
                 </div>
                 <div class="offer-block">
                     <div class="offer-form">
-
+                        <h2 class="offer-form__title">start accepting credit cards legally today!</h2>
+                        <p class="offer-form__subtitle">Complete the form below and we'll get in touch.</p>
+                        <form action="#" method="post" class="form">
+                            <div class="form-inputs">
+                                <input type="text" class="form__input input" placeholder="Full Name">
+                                <span>*</span>
+                            </div>
+                            <div class="form-inputs">
+                                <input type="text" class="form__input input" placeholder="Email Address">
+                                <span>*</span>
+                            </div>
+                            <input type="text" class="form__input input" placeholder="Phone #">
+                            <input type="text" class="form__input input" placeholder="Business Name">
+                            <div class="form-block form__block">
+                                <a href="tel:8446225666" class="form-block__phone">844-622-5666</a>
+                                <span>OR</span>
+                                <button type="submit" class="form-block__button">Submit</button>
+                            </div>
+                            <div class="form-block ">
+                                <label class="form-block__label">
+                                    <input type="checkbox">
+                                    <div class="form-block__indicator"></div>
+                                </label>
+                                <p class="form-block__text">your contact information will not be distributer</p>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
     </div>
     <main>
+        <section class="layout">
+            <div class="container">
+                <div class="layout-blocks flex">
+                    <div class="layout-block">
+                        <div class="layout-block__image">
+                            <img src="./img/layer1.jpg" alt="layer1">
+                        </div>
+                        <h3 class="layout-block__title">CBD MERCHANT ACCOUNT</h3>
+                        <p class="layout-block__text">CBD Merchant Account is very proud to launch as the exclusive low cost and reliable payment processing partner to the CBD and hemp</p>
+                        <a href="#" class="layout-block__link">read more...</a>
+                    </div>
+                    <div class="layout-block">
+                        <div class="layout-block__image">
+                            <img src="./img/layer2.jpg" alt="layer2">
+                        </div>
+                        <h3 class="layout-block__title">CBD Reader</h3>
+                        <p class="layout-block__text">CBD Merchant Account is very proud to launch as the exclusive low cost and reliable payment processing partner to the CBD and hemp</p>
+                        <a href="#" class="layout-block__link">read more...</a>
+                    </div>
+                    <div class="layout-block">
+                        <div class="layout-block__image">
+                            <img src="./img/layer3.jpg" alt="layer3">
+                        </div>
+                        <h3 class="layout-block__title">CBD MERCHANT PROCESSING</h3>
+                        <p class="layout-block__text">CBD Merchant Account is very proud to launch as the exclusive low cost and reliable payment processing partner to the CBD and hemp</p>
+                        <a href="#" class="layout-block__link">read more...</a>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="need">
             <div class="need-text">
                 <h2 class="need-text__title"><span>Cannabis</span> Credit Card Processing</h2>
@@ -82,6 +137,11 @@
                 </div>
             </div>
         </section>
+        <section class="payment">
+            <div class="container">
+
+            </div>
+        </section>
         <section class="do">
             <div class="container">
                 <div class="do-blocks flex">
@@ -92,6 +152,42 @@
                     </div>
                     <div class="do-block">
                         <img class="do-block__image" src="./img/woman.png" alt="woman">
+                        <div class="do-btn flex flex-center">
+                            <a href="#" class="do-btn__link">Request a Call Back</a>
+                            <a href="tel:630.396.6888 " class="do-btn__phone"><span>Call</span> : 630.396.6888</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="merchant">
+            <div class="container">
+                <h2 class="merchant__title">CBD Merchant Account</h2>
+                <p class="merchant__subtitle">CBD Merchant Account is very proud to launch as the exclusive low cost and reliable payment processing partner to the CBD and hemp industry.</p>
+                <div class="merchant-blocks flex">
+                    <div class="merchant-block">
+                        <div class="merchant-block__image">
+                            <img src="./img/account1.jpg" alt="account1">
+                        </div>
+                        <h3 class="merchant-block__title">What are High Risk Merchant Accounts and High Risk Merchant Services?</h3>
+                        <p class="merchant-block__text">Fed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia.</p>
+                        <a href="#" class="merchant-block__link">Read More</a>
+                    </div>
+                    <div class="merchant-block">
+                        <div class="merchant-block__image">
+                            <img src="./img/account2.jpg" alt="account2">
+                        </div>
+                        <h3 class="merchant-block__title">What are High Risk Merchant Accounts and High Risk Merchant Services?</h3>
+                        <p class="merchant-block__text">Fed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia.</p>
+                        <a href="#" class="merchant-block__link">Read More</a>
+                    </div>
+                    <div class="merchant-block">
+                        <div class="merchant-block__image">
+                            <img src="./img/account3.jpg" alt="account3">
+                        </div>
+                        <h3 class="merchant-block__title">What are High Risk Merchant Accounts and High Risk Merchant Services?</h3>
+                        <p class="merchant-block__text">Fed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia.</p>
+                        <a href="#" class="merchant-block__link">Read More</a>
                     </div>
                 </div>
             </div>
