add site adapive - 992px

--- a/index.html
+++ b/index.html
@@ -407,7 +407,51 @@
     </main>
     <footer class="footer">
         <div class="container">
-
+            <div class="footer-blocks flex">
+                <div class="footer-block">
+                    <a href="index.html" class="footer-block__logo">
+                        <img src="./img/footer-logo.png" alt="footer-logo">
+                    </a>
+                    <p class="footer-block__description">You can even offset our fee by charging a "convenience fee", or change more and make a profit. A representative can assist you with this once you open your account</p>
+                    <div class="contact">
+                        <span class="contact__hour">24-hour call availabillity</span>
+                        <div class="contact-block flex flex-center">
+                            <a href="tel:630.396.6888" class="contact-block__phone">Call : <span>630.396.6888</span></a>
+                            <span class="contact-block__or">or</span>
+                            <a href="#" class="contact-block__btn">Request a Call Back</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-block">
+                    <h6 class="footer-block__title">Find it Here</h6>
+                    <ul class="list">
+                        <li class="list__item">
+                            <a href="#" class="list__link">Home</a>
+                        </li>
+                        <li class="list__item">
+                            <a href="#" class="list__link">Financial Guidance</a>
+                        </li>
+                        <li class="list__item">
+                            <a href="#" class="list__link">Product &amp; Services</a>
+                        </li>
+                        <li class="list__item">
+                            <a href="#" class="list__link">About Us</a>
+                        </li>
+                        <li class="list__item">
+                            <a href="#" class="list__link">Customer Service</a>
+                        </li>
+                        <li class="list__item">
+                            <a href="#" class="list__link">Blog</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-block">
+                    <h6 class="footer-block__title">Fraud &amp; Criminal Warning</h6>
+                    <p class="footer-block__text">To prevent Identity Theft and Fraud, TruHarbor tracks all IP Addresses and verifies all identifying information.</p>
+                    <p class="footer-block__text">All Fraudulent Activity is forwarded to the appropriate Law Enforcement Agency for prosecution</p>
+                </div>
+            </div>
+            <p class="footer__text">&copy;2019 TruHarbor - All Rights Reserved | Colorado Springs SEO | A SpotOn Financial Company</p>
         </div>
     </footer>
 
