--- a/index.html
+++ b/index.html
@@ -15,25 +15,32 @@
                     <img src="./img/logo.png" alt="logo" class="logo__image">
                 </a>
                 <div class="header-side">
-                    <nav class="nav">
-                        <ul class="nav-list flex">
-                            <li class="nav-list__item">
-                                <a href="#" class="nav-list__link">Home</a>
-                            </li>
-                            <li class="nav-list__item">
-                                <a href="#" class="nav-list__link">Solutions</a>
-                            </li>
-                            <li class="nav-list__item">
-                                <a href="#" class="nav-list__link">ISO &amp; Agents</a>
-                            </li>
-                            <li class="nav-list__item">
-                                <a href="#" class="nav-list__link">Company</a>
-                            </li>
-                            <li class="nav-list__item">
-                                <a href="#" class="nav-list__link">Apply</a>
-                            </li>
-                        </ul>
-                    </nav>
+                    <div class="menu">
+                        <div class="burger">
+                            <div class="burger__top"></div>
+                            <div class="burger__center"></div>
+                            <div class="burger__bottom"></div>
+                        </div>
+                        <nav class="nav">
+                            <ul class="nav-list flex">
+                                <li class="nav-list__item">
+                                    <a href="#" class="nav-list__link">Home</a>
+                                </li>
+                                <li class="nav-list__item">
+                                    <a href="#" class="nav-list__link">Solutions</a>
+                                </li>
+                                <li class="nav-list__item">
+                                    <a href="#" class="nav-list__link">ISO &amp; Agents</a>
+                                </li>
+                                <li class="nav-list__item">
+                                    <a href="#" class="nav-list__link">Company</a>
+                                </li>
+                                <li class="nav-list__item">
+                                    <a href="#" class="nav-list__link">Apply</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                     <a href="tel:630.396.6888" class="header-side__phone phone">630.396.6888</a>
                 </div>
             </div>
