--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 </svg>
                             </div>
                             <div class="content-block__description">
-                                <h3 class="content-block__title">E-Commerce</h3>
+                                <h3 class="content-block__title">Credit Card</h3>
                                 <p class="content-block__text">Dolor sit amet consectetur elit sed do eiusmod tempor incd</p>
                             </div>
                         </div>
@@ -213,7 +213,7 @@
                                 </svg>        
                             </div>
                             <div class="content-block__description">
-                                <h3 class="content-block__title">E-Commerce</h3>
+                                <h3 class="content-block__title">Point of Sale</h3>
                                 <p class="content-block__text">Dolor sit amet consectetur elit sed do eiusmod tempor incd</p>
                             </div>
                         </div>
@@ -229,7 +229,7 @@
                                 </svg>
                             </div>
                             <div class="content-block__description">
-                                <h3 class="content-block__title">E-Commerce</h3>
+                                <h3 class="content-block__title">Wireless</h3>
                                 <p class="content-block__text">Dolor sit amet consectetur elit sed do eiusmod tempor incd</p>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                                 </svg>
                             </div>
                             <div class="content-block__description">
-                                <h3 class="content-block__title">E-Commerce</h3>
+                                <h3 class="content-block__title">Kiosk</h3>
                                 <p class="content-block__text">Dolor sit amet consectetur elit sed do eiusmod tempor incd</p>
                             </div>
                         </div>
@@ -377,6 +377,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="clear"></div>
             </div>
         </section>
         <section class="merchant">
