--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
             <div class="container">
                 <div class="benefits-blocks flex">
                     <div class="benefits-block">
-                        <h2 class="benefits-block__title">benefits of using cbd merchant account</h2>
+                        <h2 class="benefits-block__title mp">benefits of using cbd</h2>
+                        <h3 class="benefits-block__title mb">merchant account</h3>
                         <p class="benefits-block__text">CBD Merchant Account is very proud to launch as the exclusive low cost and reliable payment processing partner to the CBD and hemp industry. CBD and hemp products currently fall into a grey area whereby both government and financial institutions do not label them illegal but will not endorse them because of associations to marijuana. It has been particularly difficult for CBD businesses to find a reliable source for payment processing. Over a course of 2 years, CBD Merchant Account has worked diligently</p>
                         <div class="benefits-btn flex flex-center">
                             <a href="#" class="benefits-btn__link-left">CBD Merchant Account</a>
